...
        <variable
                name="model"
                type="com.amin.sample.model.ImgurImage" />
    </data>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="3dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

...
                    android:layout_height="0dp"
                    android:background="@color/imgurImageCaptionBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/coverImageView" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:maxLines="2"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
...
