...
            android:layout_height="?android:attr/actionBarSize"
            android:padding="10dp"
            android:src="@drawable/img_imgur_logo"
            app:layout_scrollFlags="scroll" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            style="@style/tabStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:tabMode="fixed">

...
