<resources>
    <string name="app_name">Amin Keshavarzian CV</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown_error">unknown error occurred</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="thanks">Thanks</string>
    <string name="copied">Copied</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">@android:string/ok</string>
    <string name="search_shutter_stock_hint">Search Shutter Stock</string>
    <string name="hot">Hot</string>
    <string name="top">Top</string>
    <string name="user">User</string>
    <string name="search">search here</string>
    <string name="shutter_stock_description">Empower your users with over 225 million stunning royalty-free assets and AI-powered search with a scalable API trusted by Facebook, Google, and more.</string>
    <string name="shutter_stock_title">Shutter Stock API</string>
    <string name="lunch">Lunch</string>
    <string name="to_start_message">To Start, rotate the menu and choose the sample that you want</string>
    <string name="imgur_title">Imgur Api</string>
    <string name="imgur_description">Imgur\'s API exposes the entire Imgur infrastructure via a standardized programmatic interface. Using Imgur\'s API, you can do just about anything you can do on imgur.com</string>
    <string name="posts_title">Fake Online REST API</string>
    <string name="posts_description">Fake Online REST API for Testing and Prototyping Serving 350M requests per month</string>
    <string name="empty_slot">This slot is currently empty and if I was unlucky getting hired, I will keep adding more samples from other Assignments, I hope not though :D</string>
    <string name="box">M0,0h12v12h-12z</string>
    <string name="decode_file_1">-> Decode File 1</string>
    <string name="decode_file_2">-> Decode File 2</string>
    <string name="decode_file_3">-> Decode File 3</string>
    <string name="current_signal_bit">Current Signal Bit:</string>
    <string name="current_signal_byte">Current Signal Byte:</string>
    <string name="current_signal_direction">Current Signal Direction:</string>
    <string name="current_signal_char">Current Encoded Character:</string>
    <string name="signalUp">↑</string>
    <string name="signalDown">↓</string>
    <string name="progress">Progress:</string>
    <string name="show_messages">show messages</string>
    <string name="decode">Decode the file</string>
    <string name="decode_menu_title">** Wav Encrypted Coding Challenge</string>
    <string name="decode_desc">Decode an encrypted message from a wav file and show it, it also rocks retro design</string>
</resources>
