<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseBackColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/idleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/to_start_message"
            app:layout_constraintBottom_toBottomOf="@+id/infoCV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/infoCV" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/infoCV"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/baseBackDarker"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/infoLogo"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/img_shutter_stock_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/infoTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/infoLogo"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/shutter_stock_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/infoDesc"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:ellipsize="marquee"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/lunchBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/infoLogo"
                    app:layout_constraintTop_toBottomOf="@+id/infoTitle"
                    tools:text="@string/shutter_stock_description" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/lunchBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scoreWheel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoCV">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/menuWheel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="25dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_menu_wheel" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/menuWheel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/menuWheel"
                app:srcCompat="@mipmap/ic_launcher" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_swing_pin"
                app:tint="@color/colorPrimary" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:listitem="@layout/item_main_menu"
            app:layout_constraintTop_toBottomOf="@+id/scoreWheel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
