...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/searchEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/search_shutter_stock_hint"
                        android:gravity="center_vertical|start"
                        android:layout_marginStart="20dp"
...
